# termpic

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  print.rs  term.rs
