[package]
name = "termpic"
description = "Fork of https://github.com/hopey-dishwasher/termpix"
documentation = "https://docs.rs/termpic"
repository = "https://github.com/Its-Just-Nans/termpic"
homepage = "https://github.com/Its-Just-Nans/termpic"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.23", features = ["derive"] }
image = "0.25.5"
terminal_size = "0.4.1"
